cmake_minimum_required(VERSION 3.20)
project(QtMarkdown
        VERSION 1.0.0
        DESCRIPTION "A simple markdown editor"
        )
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(QT ON)
add_subdirectory(3rd)
if (MSVC)
    add_compile_options("/utf-8")
    if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_LIST_DIR})
        set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
        set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
    endif ()
endif ()
find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Gui Quick Qml Widgets Concurrent REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Gui Quick Qml Widgets Concurrent REQUIRED)
option(BUILD_STATIC "build static library" OFF)
if (BUILD_STATIC)
    add_definitions(-DBUILD_STATIC)
endif ()
include(MarkdownInstall.cmake)
add_subdirectory(src)
if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_LIST_DIR})
    add_subdirectory(example)
endif ()
option(BUILD_TEST "build unit test" OFF)
if (BUILD_TEST)
    # add_subdirectory(deps/Catch2)
    add_subdirectory(test)
endif ()
