cmake_minimum_required(VERSION 3.20)
project(QtMarkdown
        VERSION 1.0.0
        DESCRIPTION "A simple markdown editor"
        )
set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# CMake 4.1.2 doesn't yet know AppleClang 17 supports C++26.
# Work around by telling the compiler directly and telling CMake
# to skip its own compiler-feature check for this dialect.
set(CMAKE_CXX26_STANDARD_COMPILE_OPTION "-std=c++26")
set(CMAKE_CXX26_EXTENSION_COMPILE_OPTION "-std=c++26")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(QT ON)
add_subdirectory(3rd)
if (MSVC)
    add_compile_options("/utf-8")
    if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_LIST_DIR})
        set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
        set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
    endif ()
endif ()
find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Gui Quick Qml Widgets REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Gui Quick Qml Widgets REQUIRED)
option(BUILD_STATIC "build static library" OFF)
if (BUILD_STATIC)
    add_definitions(-DBUILD_STATIC)
endif ()
include(MarkdownInstall.cmake)
add_subdirectory(src)
if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_LIST_DIR})
    add_subdirectory(example)
endif ()
option(BUILD_TEST "build unit test" OFF)
if (BUILD_TEST)
    enable_testing()
    add_subdirectory(test)
endif ()
