module(
    name = "qtmarkdown",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")

bazel_dep(name = "magic_enum", version = "0.9.7")
local_path_override(
    module_name = "magic_enum",
    path = "3rd/magic_enum",
)

bazel_dep(name = "doctest", version = "2.4.11")
# Clone doctest into 3rd/ to enable tests:
#   git clone --depth 1 --branch v2.4.11 https://github.com/doctest/doctest.git 3rd/doctest
# Then uncomment the override below:
# local_path_override(
#     module_name = "doctest",
#     path = "3rd/doctest",
# )
