load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "QtMarkdownParser",
    srcs = [
        "debug.cpp",
        "parser/Document.cpp",
        "parser/LatexBlock.cpp",
        "parser/Parser.cpp",
        "parser/PieceTable.cpp",
        "parser/Text.cpp",
        "parser/Token.cpp",
        "parser/Visitor.cpp",
        "parser/parsers/CheckboxListParser.cpp",
        "parser/parsers/CodeBlockParser.cpp",
        "parser/parsers/HeaderParser.cpp",
        "parser/parsers/ImageParser.cpp",
        "parser/parsers/InlineCodeParser.cpp",
        "parser/parsers/InlineLatexParser.cpp",
        "parser/parsers/LatexBlockParser.cpp",
        "parser/parsers/LinkParser.cpp",
        "parser/parsers/OrderedListParser.cpp",
        "parser/parsers/ParagraphParser.cpp",
        "parser/parsers/QuoteBlockParser.cpp",
        "parser/parsers/SemanticTextParser.cpp",
        "parser/parsers/UnorderedListParser.cpp",
    ],
    hdrs = [
        "debug.h",
        "QtMarkdown_global.h",
        "core/Utf8Util.h",
        "parser/Document.h",
        "parser/IBufferProvider.h",
        "parser/MdString.h",
        "parser/Node.h",
        "parser/ParseContext.h",
        "parser/Parser.h",
        "parser/ParserDetail.h",
        "parser/PieceTable.h",
        "parser/Text.h",
        "parser/Token.h",
        "parser/Visitor.h",
        "parser/mddef.h",
        "parser/nodes/BoldText.h",
        "parser/nodes/CheckboxList.h",
        "parser/nodes/CodeBlock.h",
        "parser/nodes/Header.h",
        "parser/nodes/Hr.h",
        "parser/nodes/Image.h",
        "parser/nodes/InlineCode.h",
        "parser/nodes/InlineLatex.h",
        "parser/nodes/ItalicBoldText.h",
        "parser/nodes/ItalicText.h",
        "parser/nodes/LatexBlock.h",
        "parser/nodes/Lf.h",
        "parser/nodes/Link.h",
        "parser/nodes/ListNode.h",
        "parser/nodes/OrderedList.h",
        "parser/nodes/Paragraph.h",
        "parser/nodes/QuoteBlock.h",
        "parser/nodes/StrickoutText.h",
        "parser/nodes/Table.h",
        "parser/nodes/UnorderedList.h",
    ],
    includes = [
        ".",
        "parser",
    ],
    copts = [
        "-DQtMarkdown_LIBRARY",
    ],
    deps = [
        "@magic_enum",
    ],
    visibility = ["//visibility:public"],
)
