# Tests require doctest. Uncomment after cloning doctest into 3rd/doctest
# and enabling the doctest dependency in MODULE.bazel.
#
# load("@rules_cc//cc:defs.bzl", "cc_test")
#
# cc_test(
#     name = "test_parser",
#     size = "small",
#     srcs = ["test_parser.cpp"],
#     deps = [
#         "//src:QtMarkdownParser",
#         "@doctest//:doctest",
#     ],
# )
